<resources>
    <string name="app_name">Installation of doors</string>
    <string name="widthProfile">Ширина профиля</string>
    <string name="xvaluex">Величина вычета для получения ширины профиля для вставки</string>
    <string name="nameProfile">Профиль</string>
    <string name="valueRollers">Величина для установки роликов</string>
    <string name="btnTest">write in DB</string>
    <string name="addProfile">Добавить профиль</string>
    <string name="delProfile">Удалить профиль</string>
    <string name="showProfile">Просмотреть профили</string>
    <string name="textViewAperture">Проем</string>
    <string name="editTextHeightAperture">Высота</string>
    <string name="editTextWidthAperture">Ширина</string>
    <string name="textViewCalculationDoors">Расчет дверей</string>
    <string name="editTextCountDoors">Кол - во дверей</string>
    <string name="editTextCountOverlap">Кол - во перехлестов</string>
    <string name="textViewTypeProfile">Тип профиля</string>
    <string name="buttonCalculate">Вычислить</string>
    <string name="buttonClean">Очистить</string>
    <string name="textViewOverlapIs">Перехлест:</string>
    <string name="about">О программе</string>
    <string name="showHistory">Просмотреть историю</string>
    <string name="buttonDelProfile">Удалить профиль</string>
    <string name="buttonAddProfile">Добавить профиль</string>
    <string name="valueTolerance">Величина допуска</string>
    <string name="jumperMagnitude">Величина перемычки</string>
    <string name="buttonOk">Ок</string>
    <string name="Result">Результаты</string>
    <string name="HeightDoor">Высота двери:</string>
    <string name="HeightInst">Высота вставки:</string>
    <string name="WidthDoor">Ширина двери:</string>
    <string name="WidthInst">Ширина вставки:</string>
    <string name="ViewDoor">Вид двери</string>
    <string name="WithOutGlass">Без расстекловки</string>
    <string name="free">Свободная</string>
    <string name="half">1/2-1/2</string>
    <string name="OneThird">1/3-1/3-1/3</string>
    <string name="OneQuarter">1/4-1/2-1/4</string>
    <string name="OneQuarter2">1/4-1/4-1/4-1/4</string>
    <string name="OneFifth">1/5-1/5-1/5-1/5-1/5</string>
    <!--<string name="info">Если в качестве детали используется зеркало, то высота вставки уменьшится на 2мм.</string>-->
    <string name="info">При использовании в качестве детали зеркала, высота вставки уменьшится на 2мм.</string>
    <string name="nameprogram">Installation of doors</string>
    <string name="dateprogram">Апрель, 2016</string>
    <string name="version">Версия 1.0</string>
    <string name="aboutprogram">Данное программное обеспечение разработано специально
                                для начинающих предпринимателей в сфере изготовления мебели,
                                помогает решить проблему ручного расчёта, при сборке,
                                нарезке или вставки материала, наглядно
                                демонстрирует результаты.</string>
    <string name="developers">В разработке учавствовали: Логинов Константин, Ерусланов Егор, Биченко Никита.</string>
    <string name="Search">Поиск</string>
</resources>
